# PyDayBCN2025

./: .gitignore  README.md  Requirements.txt  pyproject.toml
workshop1/: 00_langchain_basics.ipynb  01_langgraph_basics.ipynb  02_email_agent.ipynb  README.md  example.env  langchain_langgraph_intro.pptx  langgraph.json
workshop1/agents/: email_agent.py  invoice_agent.py
workshop1/langgraph_new/src/memory_agent/: context.py
workshop2/: NLP_Filmaffinity_no_output.ipynb  NLP_NLTK_VADER_no_outputs.ipynb  main.py  textos_NLP_sia.txt
workshop3/: main.py
workshop4/: demo_01_self_reparation.ipynb  demo_02_evolution.ipynb  demo_03_toolmaker.ipynb  demo_04_evolving_team.ipynb  main.py  tools.py
