[project]
name = "pyday-bcn-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-openai>=1.1.0",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.4",
    "langgraph-cli[inmem]>=0.4.7",
    "langsmith>=0.4.49",
    "notebook>=7.5.0",
    "ollama>=0.6.1",
    "pip>=25.3",
    "prettyprint>=0.1.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "textblob>=0.19.0",
]
